Complete the documentation website overhaul

--- a/docs/docs/setup/connecting/index.mdx
+++ b/docs/docs/setup/connecting/index.mdx
@@ -2,6 +2,13 @@
 
 import DocCardList from "@theme/DocCardList";
 
-Choose one or more devices or emulators to connect to your self-hosted server.
+Choose one or more devices and/or emulators to connect to your self-hosted server.
+
+:::tip
+
+Start with the web browser method first and create a test account to verify that your server is working. Then, move on
+to connecting other devices.
+
+:::
 
 <DocCardList />
