Document SSSL connection steps and disable by default
The main issue with enabling SSSL by default is that it reqires the manual step of dumping the Nintendo CA G3 first.

--- a/docs/docs/setup/connecting/cemu.mdx
+++ b/docs/docs/setup/connecting/cemu.mdx
@@ -16,7 +16,7 @@ This guide will show you how to access your server from the Cemu emulator.
 
 <Tabs>
   <TabItem value="wiiu" label="With a Wii U" default>
-    1. Follow the [Wii U connecting guide](./wiiu.md) first.
+    1. Follow the [Wii U connecting guide](./wiiu.mdx) first.
     2. Follow the [official Pretendo Network Cemu installation guide](https://pretendo.network/docs/install/cemu).
        - If you are using multiple accounts, make sure to disable the `Merge Account To Default Cemu User` setting in
          Dumpling.
