Fix setting Inkay as default

--- a/docs/docs/setup/connecting/wiiu.mdx
+++ b/docs/docs/setup/connecting/wiiu.mdx
@@ -69,7 +69,7 @@ servers.
 ## Changing which server you are connected to
 
 <Tabs groupId="methods">
-  <TabItem value="inkay" label="Inkay (homebrew)">
+  <TabItem value="inkay" label="Inkay (homebrew)" default>
     |                                 | Inkay build                                                  | Inkay patching | Proxy settings                             |
     | ------------------------------- | ------------------------------------------------------------ | -------------- | ------------------------------------------ |
     | **Self-hosted Pretendo server** | Custom (run `./scripts/compile-custom-inkay.sh`)             | Enabled        | Enabled, set to the server IP, port `8080` |
